@@ -43,8 +43,6 @@ $strConfigConfirm_desc = __('Whether a warning (&quot;Are your really sure...&qu
 $strConfigConfirm_name = __('Confirm DROP queries');
 $strConfigDBG_sql_name = __('Debug SQL');
 $strConfigDefaultDisplay_name = __('Default display direction');
-$strConfigDefaultPropDisplay_desc = __('[kbd]horizontal[/kbd], [kbd]vertical[/kbd] or a number that indicates maximum number for which vertical model is used');
-$strConfigDefaultPropDisplay_name = __('Display direction for altering/creating columns');
 $strConfigDefaultTabDatabase_desc = __('Tab that is displayed when entering a database');
 $strConfigDefaultTabDatabase_name = __('Default database tab');
 $strConfigDefaultTabServer_desc = __('Tab that is displayed when entering a server');
