@@ -122,8 +122,7 @@ $forms['Main_frame']['Edit'] = array(
     'ShowFieldTypesInDataEditView',
     'InsertRows',
     'ForeignKeyDropdownOrder',
-    'ForeignKeyMaxLimit',
-    'DefaultPropDisplay');
+    'ForeignKeyMaxLimit');
 $forms['Main_frame']['Tabs'] = array(
     'LightTabs',
     'DefaultTabServer',
